--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="me.thanel.keepasst">
 
+    <uses-permission android:name="android.permission.USE_FINGERPRINT" />
+
     <application
         android:name=".KeePassApp"
         android:allowBackup="true"
