--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,11 +37,14 @@ dependencies {
         exclude module: 'stax-api'
         exclude module: 'xpp3'
     }
-    implementation 'com.xwray:groupie:2.0.0-alpha2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.19'
     implementation 'com.loopeer.lib:shadow:0.0.3'
     implementation 'com.chibatching.kotpref:kotpref:2.2.0'
     implementation 'org.ocpsoft.prettytime:prettytime:4.0.1.Final'
+    implementation('com.mikepenz:fastadapter:2.6.3@aar') {
+        transitive = true
+    }
+    implementation 'com.mikepenz:fastadapter-commons:2.6.3@aar'
 }
 
 kotlin {
